--- a/css/main.css
+++ b/css/main.css
@@ -206,6 +206,7 @@ canvas {
    box-shadow: 0 0 5px 6px rgba(250, 189, 58, 0.2);
 }
 .button[data-color="red"] {
+   border-radius: 18px;
    min-width: 280px;
    background-color: #fa3a3a;
    -webkit-box-shadow: 0 0 3px 4px rgb(250 58 58 / 15%);
@@ -1456,24 +1457,35 @@ img {
    -webkit-box-shadow: 0px 1px 5.34px 0.66px rgba(217, 217, 217, 0.91);
    box-shadow: 0px 1px 5.34px 0.66px rgba(217, 217, 217, 0.91);
 }
+.modal-body__question,
 .modal-body__attack {
    font-size: 22px;
    line-height: 1.2;
    font-weight: 900;
    color: #5865b2;
+   margin-bottom: 20px;
 }
 
-.modal-body__question {
-   text-align: center;
-   font-size: 22px;
-   line-height: 1.2;
-   font-weight: 900;
-   color: #5865b2;
-   padding-right: 20px;
-}
 .modal-body__result {
-   background: url(/assets/images/fish-in-ice.png) no-repeat left;
-   height: 40px;
+   display: flex;
+   align-items: center;
+   justify-content: center;
+   font-family: UA_AdLib_BT;
+   font-size: 38px;
+   line-height: 1.2;
+   font-weight: 400;
+   color: #5865b2;
+   margin-bottom: 20px;
+}
+.modal__input {
+   display: block;
+   margin: 0 auto;
+   height: 45px;
+   min-width: 470px;
+   padding: 5px;
+   font-family: inherit;
+   border-radius: 20px;
+   border: 1px solid #c0bfbf;
 }
 .close {
    position: relative;
@@ -1494,22 +1506,18 @@ img {
    -webkit-transform: rotate(45deg);
    transform: rotate(45deg);
 }
-
 .close::after {
    -webkit-transform: rotate(-45deg);
    transform: rotate(-45deg);
 }
-
 .main-personage {
    padding-top: 0;
 }
-
 .personage__top {
    position: relative;
    padding-top: 30px;
    background-color: #70e4f1;
 }
-
 .personage__top::before {
    content: "";
    position: absolute;
@@ -1522,7 +1530,6 @@ img {
    background-position: bottom left;
    background-size: contain;
 }
-
 .main-btns__items {
    display: -ms-flexbox;
    display: flex;
@@ -1531,28 +1538,23 @@ img {
    -ms-flex-align: center;
    -ms-flex-pack: justify;
 }
-
 .main-btns__item {
    display: -ms-flexbox;
    display: flex;
    align-items: center;
    -ms-flex-align: center;
 }
-
 .main-btns__item .icon_busket {
    fill: #000;
 }
-
 .main-btns__icon-share {
    margin-right: 20px;
 }
-
 .main-btn svg {
    width: 25px;
    height: 25px;
    cursor: pointer;
 }
-
 .personage__img {
    display: -ms-flexbox;
    display: flex;
@@ -1566,7 +1568,6 @@ img {
    -ms-flex-pack: center;
    -ms-flex-align: center;
 }
-
 .personage__bottom {
    padding-top: 40px;
 }
@@ -1574,7 +1575,6 @@ img {
 .personage__bottom .text-title {
    margin-bottom: 17px;
 }
-
 .personage-info__items {
    display: -ms-flexbox;
    display: flex;
@@ -1596,11 +1596,9 @@ img {
 .personage-info__item_left {
    width: 300px;
 }
-
 .main__search {
    margin-bottom: 34px;
 }
-
 .mobile-menu {
    position: fixed;
    top: 0;
@@ -1624,47 +1622,39 @@ img {
    -ms-flex-align: center;
    -ms-flex-pack: center;
 }
-
 .mobile-menu.active {
    overflow: hidden;
    -webkit-transform: translateX(0);
    transform: translateX(0);
    opacity: 1;
 }
-
 .mobile-menu__inner {
    text-align: center;
 }
-
 .mobile-menu .nav-page__link {
    font-size: 22px;
    color: #fff;
 }
-
 @-webkit-keyframes showModal {
    0% {
       -webkit-transform: translateY(-25px);
       transform: translateY(-25px);
    }
-
    100% {
       -webkit-transform: translateY(0);
       transform: translateY(0);
    }
 }
-
 @keyframes showModal {
    0% {
       -webkit-transform: translateY(-25px);
       transform: translateY(-25px);
    }
-
    100% {
       -webkit-transform: translateY(0);
       transform: translateY(0);
    }
 }
-
 @media only screen and (max-width: 1480px) {
    .header__login {
       margin-right: 20px;
@@ -1675,13 +1665,11 @@ img {
    .start-page__nav-page {
       margin-top: 20px;
    }
-
    .start-page__logo .logo__img {
       top: 5px;
       right: -14px;
       width: 70px;
    }
-
    .start-page__btn {
       width: 200px;
       height: 45px;
@@ -1689,7 +1677,6 @@ img {
       font-size: 20px;
       border-radius: 25px;
    }
-
    .container {
       padding: 0 30px;
    }
@@ -1697,16 +1684,13 @@ img {
    .main-menu__item {
       margin-right: 10px;
    }
-
    .nav-page__link {
       margin-bottom: 15px;
       font-size: 20px;
    }
-
    .card-clans__info {
       width: calc(100% - 115px);
    }
-
    .card-clans__photo {
       width: 115px;
       height: 115px;
@@ -1716,25 +1700,20 @@ img {
       margin-right: 0;
    }
 }
-
 @media only screen and (max-width: 991px) {
    .header__mobile-menu-trigger {
       display: block;
    }
-
    body {
       font-size: 18px;
    }
-
    .header {
       padding-top: 10px;
       padding-bottom: 10px;
    }
-
    .header__event {
       margin-left: auto;
    }
-
    .header__menu {
       position: fixed;
       top: 0;
@@ -1745,23 +1724,19 @@ img {
       padding: 0 30px 0 30px;
       background-color: #142e4d;
    }
-
    .header__hamburger {
       display: block;
       margin-left: 20px;
    }
-
    .logo__title {
       font-size: 90px;
    }
-
    .main-menu__hamburger {
       position: absolute;
       top: 50px;
       right: 30px;
       display: block;
    }
-
    .main-menu__list {
       -ms-flex-direction: column;
       flex-direction: column;
@@ -1773,77 +1748,62 @@ img {
       margin-right: 0;
       margin-bottom: 20px;
    }
-
    .text-title {
       margin-bottom: 12px;
       font-size: 22px;
    }
-
    .cards__item {
       -ms-flex: 0 0 50%;
       flex: 0 0 50%;
    }
-
    .card__title {
       font-size: 18px;
    }
-
    .footer {
       padding-top: 80px;
       padding-bottom: 15px;
    }
-
    .personage__img {
       padding-top: 60px;
       padding-bottom: 95px;
    }
 }
-
 @media only screen and (max-width: 767px) {
    .container {
       padding: 0 15px;
    }
-
    .logo__title {
       font-size: 50px;
    }
-
    .nav-page__link {
       font-size: 18px;
    }
 }
-
 @media only screen and (max-width: 757px) {
    .modal-body {
       padding: 20px 15px;
    }
 }
-
 @media only screen and (max-width: 575px) {
    .wrapper-page .footer {
       padding-top: 15px;
    }
-
    .start-page__logo .logo__img {
       top: 1px;
       right: -12px;
       width: 42px;
    }
-
    .start-page__btn {
       width: 100%;
       height: 40px;
       font-size: 16px;
    }
-
    body {
       font-size: 16px;
    }
-
    .main {
       padding-top: 20px;
    }
-
    .main__cards {
       padding-top: 10px;
    }
@@ -1852,7 +1812,6 @@ img {
       padding-top: 8px;
       padding-bottom: 8px;
    }
-
    .header__login {
       justify-content: center;
       margin-right: 0;
@@ -1860,36 +1819,28 @@ img {
       color: #ffbf17;
       -ms-flex-pack: center;
    }
-
    .header__menu {
       padding: 0 20px 0 20px;
    }
-
    .header__hamburger {
       margin-left: 15px;
    }
-
    .header__registration {
       width: 100%;
    }
-
    .header__registration .button {
       color: #ffbf17;
    }
-
    .header__registration .button:hover {
       color: #fff;
    }
-
    .logo__icon {
       width: 50px;
    }
-
    .main-menu__hamburger {
       top: 30px;
       right: 20px;
    }
-
    .main-menu__event {
       display: -ms-flexbox;
       display: flex;
@@ -1899,11 +1850,9 @@ img {
       padding-bottom: 60px;
       -ms-flex-align: center;
    }
-
    .text-description {
       font-size: 18px;
    }
-
    .cards__item {
       -ms-flex: 0 0 100%;
       flex: 0 0 100%;
@@ -1912,11 +1861,9 @@ img {
       margin-bottom: 15px;
       margin-left: auto;
    }
-
    .cards__item:last-child {
       margin-bottom: 0;
    }
-
    .footer__inner {
       -ms-flex-direction: column;
       flex-direction: column;
@@ -1925,7 +1872,6 @@ img {
       -ms-flex-align: center;
       -ms-flex-pack: center;
    }
-
    .footer__copyright {
       margin-bottom: 18px;
       text-align: center;
@@ -1935,21 +1881,17 @@ img {
       width: 25px;
       height: 25px;
    }
-
    .modal-header__close {
       top: 20px;
       right: 10px;
    }
-
    .modal-body__btn {
       width: 100%;
    }
-
    .modal-body__icon span {
       width: 90px;
       padding: 10px;
    }
-
    .personage__top {
       padding-top: 15px;
    }
@@ -1961,20 +1903,16 @@ img {
       padding-top: 40px;
       padding-bottom: 40px;
    }
-
    .personage__bottom {
       padding-top: 20px;
    }
-
    .personage__bottom .text-title {
       margin-bottom: 12px;
    }
-
    .personage-info__items {
       -ms-flex-direction: column;
       flex-direction: column;
    }
-
    .personage-info__item_right {
       width: 100%;
       margin-top: 20px;
@@ -1984,7 +1922,6 @@ img {
       width: 100%;
       padding: 0 15px;
    }
-
    .personage-info__item_left {
       width: 100%;
    }
