--- a/css/main.css
+++ b/css/main.css
@@ -206,8 +206,10 @@ canvas {
    box-shadow: 0 0 5px 6px rgba(250, 189, 58, 0.2);
 }
 .button[data-color="red"] {
+   font-size: 20px;
    border-radius: 18px;
    min-width: 280px;
+   height: 56px;
    background-color: #fa3a3a;
    -webkit-box-shadow: 0 0 3px 4px rgb(250 58 58 / 15%);
    box-shadow: 0 0 3px 4px rgb(250 58 58 / 15%);
@@ -298,10 +300,12 @@ canvas {
    display: block;
 }
 .button-select {
-   min-width: 202px;
+   font-size: 20px;
+   border-radius: 18px;
+   min-width: 242px;
+   height: 56px;
    align-self: center;
    margin-top: 15px;
-   border-radius: 18px;
 }
 .wrapper-page {
    position: relative;
@@ -1379,7 +1383,7 @@ img {
    display: flex;
    -ms-flex-direction: column;
    flex-direction: column;
-   max-width: 570px;
+   max-width: 810px;
    margin-right: auto;
    margin-left: auto;
    background-color: #fff;
@@ -1457,16 +1461,16 @@ img {
    -webkit-box-shadow: 0px 1px 5.34px 0.66px rgba(217, 217, 217, 0.91);
    box-shadow: 0px 1px 5.34px 0.66px rgba(217, 217, 217, 0.91);
 }
-.modal-body__question,
-.modal-body__attack {
-   font-size: 22px;
+.modal__question,
+.modal__attack {
+   font-size: 30px;
    line-height: 1.2;
    font-weight: 900;
    color: #5865b2;
    margin-bottom: 20px;
 }
 
-.modal-body__result {
+.modal__result {
    display: flex;
    align-items: center;
    justify-content: center;
@@ -1482,11 +1486,73 @@ img {
    margin: 0 auto;
    height: 45px;
    min-width: 470px;
-   padding: 5px;
+   padding: 16px;
    font-family: inherit;
+   color: #5865b2;
    border-radius: 20px;
    border: 1px solid #c0bfbf;
 }
+.modal-value {
+   display: flex;
+   justify-content: space-between;
+   align-items: center;
+   margin-top: 80px;
+   margin-bottom: 20px;
+}
+.modal-value__line {
+   width: 100%;
+   height: 7px;
+   background-color: #5865b299;
+   border-radius: 3.5px;
+   margin: 13px;
+}
+.modal-value__min,
+.modal-value__max {
+   display: flex;
+   align-items: center;
+   justify-content: center;
+   min-width: 70px;
+   min-height: 66px;
+   font-family: UA_AdLib_BT;
+   color: #fabd3a;
+   font-size: 38px;
+   line-height: 1.2;
+   background-color: #ffffff;
+   box-shadow: 0px 5px 11px 1px rgba(165, 165, 165, 0.33);
+   border-radius: 10px;
+}
+.modal-value__point {
+   position: absolute;
+   width: 34px;
+   height: 34px;
+   background-color: #fabd3a;
+   border: 7px solid #5865b2;
+   box-shadow: 0px 1px 7px 1px rgba(87, 101, 177, 0.79);
+   border-radius: 50%;
+   -webkit-transform: translateY(-40%);
+   -ms-transform: translateY(-40%);
+   transform: translateY(-40%);
+}
+.modal-value__point::after {
+   position: absolute;
+   display: flex;
+   align-items: center;
+   justify-content: center;
+   content: "0";
+   width: 70px;
+   height: 69px;
+   background-color: #ffffff;
+   box-shadow: 0px 5px 11px 1px rgba(165, 165, 165, 0.33);
+   border-radius: 10px;
+
+   font-family: UA_AdLib_BT;
+   font-size: 33px;
+   line-height: 1.2;
+   font-weight: 400;
+   color: #5865b2;
+   transform: translate(-35%, -140%);
+}
+
 .close {
    position: relative;
 }
