--- a/css/main.css
+++ b/css/main.css
@@ -1533,24 +1533,39 @@ img {
    -ms-transform: translateY(-40%);
    transform: translateY(-40%);
 }
-.modal-value__point::after {
+.modal-value__point-value {
    position: absolute;
    display: flex;
    align-items: center;
    justify-content: center;
-   content: "0";
    width: 70px;
    height: 69px;
    background-color: #ffffff;
    box-shadow: 0px 5px 11px 1px rgba(165, 165, 165, 0.33);
    border-radius: 10px;
-
    font-family: UA_AdLib_BT;
    font-size: 33px;
    line-height: 1.2;
    font-weight: 400;
    color: #5865b2;
    transform: translate(-35%, -140%);
+   z-index: 2;
+}
+.modal-value__point-value::before {
+   position: absolute;
+   content: "";
+   width: 70px;
+   height: 69px;
+   background-color: #ffffff;
+   box-shadow: 0px 5px 11px 1px rgba(165, 165, 165, 0.33);
+   border-radius: 10px;
+   font-family: UA_AdLib_BT;
+   font-size: 33px;
+   line-height: 1.2;
+   font-weight: 400;
+   color: #5865b2;
+   transform: rotate(45deg);
+   z-index: -1;
 }
 
 .close {
