--- a/css/main.css
+++ b/css/main.css
@@ -1554,17 +1554,12 @@ img {
 .modal-value__point-value::before {
    position: absolute;
    content: "";
-   width: 70px;
-   height: 69px;
-   background-color: #ffffff;
+   width: 0;
+   height: 0;
+   border: 28px solid;
+   border-color: transparent transparent white white;
    box-shadow: 0px 5px 11px 1px rgba(165, 165, 165, 0.33);
    border-radius: 10px;
-   font-family: UA_AdLib_BT;
-   font-size: 33px;
-   line-height: 1.2;
-   font-weight: 400;
-   color: #5865b2;
-   transform: rotate(45deg);
    z-index: -1;
 }
 
